--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <h1>Tech Newsletter Sign-Up</h1>
   <div id="container">
     <form>
+      <label for="name">First Name:</label>
+      <input id="name" type="text" name="firstname">
+      <label for="name">Last Name:</label>
+      <input id="name" type="text" name="lastname">
       <label for="name">Email:</label>
       <input id="name" type="text" name="email">
-      <label for="tel">Phone:</label>
-      <input id="tel" type="tel" name="phone">
-      <label for="dob">Date of Birth:</label>
-      <input id="dob" type="date" name="dateofbirth">
       <input type="submit" value="Submit">
     </form> 
   </div>
