--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input id="name" type="text" name="lastname">
       <label for="name">Email:</label>
       <input id="name" type="text" name="email">
-      <input type="submit" value="Submit">
+      <input type="join" value="Join">
     </form> 
   </div>
 </body>
