--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
   <h1>Tech Newsletter Sign-Up</h1>
   <div id="container">
-    <form name='sign-up'>
+    <form name='signup'>
       <label for="fname">First Name:</label>
       <input id="fname" type="text" name="firstname">
       <label for="lname">Last Name:</label>
       <input id="lname" type="text" name="lastname">
       <label for="email">Email:</label>
       <input id="email" type="text" name="email">
-      <input type="submit" value="Join" onclick="ValidateEmail(document.sign-up.email)">
+      <input type="submit" value="Join" onclick="ValidateEmail(document.signup.email)">
     </form> 
   </div>
 </body>
