--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Tech Newsletter Sign-Up</h1>
   <div id="container">
-    <form name='signup'>
+    <form name='signup' method="get" action="#null" autocomplete="on">
       <label for="fname">First Name:</label>
       <input id="fname" type="text" name="firstname">
       <label for="lname">Last Name:</label>
