--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <input id="lname" type="text" name="lastname">
       <label for="email">Email:</label>
       <input id="email" type="text" name="email">
-      <input type="submit" value="Join" onclick="ValidateEmail(document.signup.email)">
+      <input id="submit" type="submit" value="Join" onclick="ValidateEmail(document.signup.email)">
     </form> 
   </div>
 </body>
