--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <h1>Tech Newsletter Sign-Up</h1>
   <div id="container">
     <form name='signup' method="get" action="#null" autocomplete="on">
-      <label for="fname">First Name:</label>
+      <label for="fname">First Name</label>
       <input id="fname" type="text" name="firstname">
-      <label for="lname">Last Name:</label>
+      <label for="lname">Last Name</label>
       <input id="lname" type="text" name="lastname">
-      <label for="email">Email:</label>
+      <label for="email">Email</label>
       <input id="email" type="text" name="email">
       <input id="submit" type="submit" value="Join" onclick="ValidateEmail(document.signup.email)">
     </form> 
